stylesheets/stylesheet.css
/* ... */
/* === FOOTER === */
.site-footer {
  padding-top: 2rem;
  margin-top: 2rem;
  border-top: solid 1px #eff0f1;
}

.site-footer-owner {
  display: block;
  font-weight: bold;
  margin-bottom: 1rem;
}

.site-footer-credits {
  color: #819198;
  font-size: .8rem;
  float: left;
  max-width: 50%;
  margin: 1rem 0;
}

.site-footer img {
  max-width: 280px;
  float: right;
}

/* FOOTER media queries */
@media screen and (min-width: 64em) {
  .site-footer {
    font-size: 1rem;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .site-footer {
    font-size: 1rem;
  }
}

@media screen and (max-width: 42em) {
  .site-footer {
    font-size: 0.9rem;
    text-align: center;
  }
  .site-footer-credits {
    clear: both;
    float: none;
    text-align: center;
    max-width: 100%;
  }
  .site-footer img {
    clear: both;
    float: none;
  }
}



/* === EMBED === */
.embed-container {
  position: relative;
  padding-bottom: 56.25%!important;
  height: 0;
  overflow: hidden;
  max-width: 100%!important;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-width: 100%!important;
  max-height: 700px!important;
}

iframe, object, embed {
  max-width: 100%!important;
  max-height: 700px!important;
  margin: 0 auto;
  display: block;
  flex-basis: 100%;
}

@media screen and (max-width: 42em) {
  .embed-container iframe,
  .embed-container object,
  .embed-container embed {
    max-width: 100%!important;
    max-height: 300px!important;
  }
  iframe, object, embed {
    max-width: 100%!important;
    max-height: 300px!important;
  }
}



/* === BLOG === */
p.atom {
  font-style: italic;
  float: right;
}
ul.posts {
  margin: 5rem 0 0;
  padding: 0;
  list-style-type: none;
  clear: both;
}
ul.posts li {
  margin-bottom: 3rem;
  padding-bottom: 3rem;
  border-bottom: solid 1px #eff0f1;
}
ul.posts li:last-of-type {
  border-bottom:none;
}
.postdate {
  font-size: .8rem;
  font-style: italic;
}
.pagination {
  text-align: center;
}
.previous {
  float: left;
}
.next {
  float: right;
}
.meta {
  font-style: italic;
}



/* === DISQUS === */
.notecomments {
  margin: 4rem auto;
}



/* SLICK STUFF */
/* this one below is a fix to use slick inside a flex grid */
* {
  min-height: 0;
  min-width: 0;
}

.slider {
  width: 50%;
  margin: 100px auto;
}

.slick-slide {
  margin: 0;
}

.slick-slide img {
  width: 100%;
}
ul.slick-dots li.slick-active button:before {
  color: #159957;
}

